# Edge-detection

./: CMakeLists.txt  README.md
src/: Image.cpp  Image.h  main.cpp
